Adding auth logic

--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
     "serve": "cross-env NODE_ENV=development nodemon app.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "chalk": "4.1.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4"
   },
   "devDependencies": {
