--- a/client/src/app/config.json
+++ b/client/src/app/config.json
@@ -1,5 +1,5 @@
 {
-  "apiEndpoint": "http://localhost:8080/api",
+  "apiEndpoint": "http://89.223.31.60/api",
   "apiEndpointFireBase": "https://knife-sector-db-default-rtdb.europe-west1.firebasedatabase.app/",
   "isFireBase": false
 }
